# outlook-pst-rs

./: .gitignore  Cargo.toml  README.md  c.txt  release-plz.toml
.github/workflows/: maturin.yml  release-plz.yml  rust.yml
crates/compressed-rtf/: CHANGELOG.md  Cargo.toml  README.md
crates/compressed-rtf/src/: crc.rs  dictionary.rs  lib.rs
crates/pst/: CHANGELOG.md  Cargo.toml  README.md
crates/pst-python/: Cargo.toml  pst_python.pyi  pyproject.toml
crates/pst-python/py_examples/: example.py
crates/pst-python/src/: errors.rs  lib.rs  property_value.rs
crates/pst/examples/: browse_ansi.rs  browse_pst.rs  browse_unicode.rs  parse_all.rs  read_btrees.rs  read_density_list.rs  read_header.rs  read_ipm_subtree.rs  read_named_props.rs  read_root_folder.rs  read_search_updates.rs  read_store_props.rs  rebuild_amap.rs
crates/pst/examples/encoding/: mod.rs
crates/pst/src/: block_sig.rs  lib.rs  ltp.rs  messaging.rs  ndb.rs
crates/pst/src/ltp/: heap.rs  mod.rs  prop_context.rs  property.rs  read_write.rs  table.rs  table_context.rs  tree.rs
crates/pst/src/messaging/: attachment.rs  folder.rs  message.rs  mod.rs  named_prop.rs  read_write.rs  search.rs  store.rs
crates/pst/src/ndb/: block.rs  block_id.rs  block_ref.rs  byte_index.rs  header.rs  mod.rs  node_id.rs  page.rs  read_write.rs  root.rs
