[workspace]
members = [
    "crates/pst",
]
resolver = "2"

[workspace.package]
authors = [ "Microsoft" ]
edition = "2021"
rust-version = "1.76"
repository = "https://github.com/microsoft/outlook-pst-rs"
license = "MIT"
keywords = [ "win32", "outlook", "mapi" ]
categories = [ "os::windows-apis" ]

[workspace.dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
codepage-strings = "1"
crossterm = "0.28.1"
ratatui = "0.29.0"
thiserror = "2"
