[package]
name = "pst-python"
version = "1.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "pst_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"] }
outlook-pst = { path = "../pst" }
