[package]
name = "outlook-pst"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
byteorder.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
