[package]
name = "outlook-pst"
description = "Outlook PST Store Provider in Rust"
version = "1.0.0"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
byteorder.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
codepage-strings.workspace = true
compressed-rtf.workspace = true
crossterm.workspace = true
ratatui.workspace = true
